@@ -250,9 +250,10 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
-name|IFileInputStream
-name|iFin
-init|=
+name|doShuffle
+argument_list|(
+name|host
+argument_list|,
 operator|new
 name|IFileInputStream
 argument_list|(
@@ -262,16 +263,6 @@ name|compressedLength
 argument_list|,
 name|conf
 argument_list|)
-decl_stmt|;
-try|try
-block|{
-name|this
-operator|.
-name|doShuffle
-argument_list|(
-name|host
-argument_list|,
-name|iFin
 argument_list|,
 name|compressedLength
 argument_list|,
@@ -282,15 +273,6 @@ argument_list|,
 name|reporter
 argument_list|)
 expr_stmt|;
-block|}
-finally|finally
-block|{
-name|iFin
-operator|.
-name|close
-argument_list|()
-expr_stmt|;
-block|}
 block|}
 block|}
 end_class
