@@ -158,6 +158,20 @@ name|apache
 operator|.
 name|hadoop
 operator|.
+name|io
+operator|.
+name|IOUtils
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
 name|mapred
 operator|.
 name|IndexRecord
@@ -770,6 +784,8 @@ argument_list|(
 name|mapOutputFileName
 argument_list|)
 decl_stmt|;
+try|try
+block|{
 name|inStream
 operator|=
 name|CryptoUtils
@@ -781,8 +797,6 @@ argument_list|,
 name|inStream
 argument_list|)
 expr_stmt|;
-try|try
-block|{
 name|inStream
 operator|.
 name|seek
@@ -819,33 +833,15 @@ expr_stmt|;
 block|}
 finally|finally
 block|{
-try|try
-block|{
-name|inStream
+name|IOUtils
 operator|.
-name|close
-argument_list|()
-expr_stmt|;
-block|}
-catch|catch
-parameter_list|(
-name|IOException
-name|ioe
-parameter_list|)
-block|{
-name|LOG
-operator|.
-name|warn
+name|cleanup
 argument_list|(
-literal|"IOException closing inputstream from map output: "
-operator|+
-name|ioe
-operator|.
-name|toString
-argument_list|()
+name|LOG
+argument_list|,
+name|inStream
 argument_list|)
 expr_stmt|;
-block|}
 block|}
 name|scheduler
 operator|.
